--- a/contact.html
+++ b/contact.html
@@ -296,8 +296,8 @@
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6">
                         <div class="home-type group border rounded-2xl p-6 flex flex-col items-center justify-center cursor-pointer hover:shadow-xl hover:-translate-y-1 transition-all duration-300 bg-gradient-to-b from-blue-100 to-white"
                             data-type="single-family">
-                        <span class="material-symbols-outlined text-5xl mb-2 text-blue-600">house</span>
-                        <span class="font-semibold text-lg text-blue-700">Single Family House</span>
+                            <span class="material-symbols-outlined text-5xl mb-2 text-blue-600">house</span>
+                            <span class="font-semibold text-lg text-blue-700">Single Family House</span>
                         </div>
                         <div class="home-type group border rounded-2xl p-6 flex flex-col items-center justify-center cursor-pointer hover:shadow-xl hover:-translate-y-1 transition-all duration-300 bg-gradient-to-b from-pink-100 to-white"
                             data-type="townhouse">
@@ -350,10 +350,12 @@
                         </select>
                         <select id="halfBathroomSelect" class="border p-3 rounded-lg w-full">
                             <option value="" disabled selected>Half Bathrooms *</option>
+                            <option value="1">1 Bathroom</option>
                             <option value="2.5">2.5 Bathrooms</option>
                             <option value="3.5">3.5 Bathrooms</option>
                             <option value="4.5">4.5 Bathrooms</option>
                             <option value="5.5">5.5 Bathrooms</option>
+                            <option value="6">6 Bathrooms</option>
                         </select>
                     </div>
                 </div>
@@ -370,19 +372,20 @@
                         <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
                                     hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
                                     bg-gradient-to-b from-gray-100 to-white"
-                            data-price="24">
+                            data-price="10">
                             <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">bed</span>
                             <span class="font-bold text-base text-gray-800 group-hover:text-black">Bed (Office, or Dry Room)</span>
                         </div>
                         <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
                                     hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
                                     bg-gradient-to-b from-gray-100 to-white"
-                            data-price="12">
+                            data-price="20">
                             <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">shower</span>
                             <span class="font-bold text-base text-gray-800 group-hover:text-black">Bath (or other Wet Room)</span>
                         </div>
                     </div>
                 </div>
+
 
                 <!-- Frequency Options -->
                 <div id="frequency-options" class="md:col-span-2 mt-6">
@@ -724,22 +727,25 @@
 
                 <!-- Booking Summary (Modernized) -->
                 <div class="lg:col-span-1">
-                    <div class="max-w-sm mx-auto bg-white shadow-xl rounded-2xl p-6 border border-gray-100 sticky top-20 transition-transform hover:scale-105">
+                    <div class="max-w-sm mx-auto bg-white shadow-xl rounded-2xl p-6 border border-gray-100 sticky top-20 overflow-y-auto max-h-[80vh] transition-transform hover:scale-105">
                         <h3 class="text-2xl font-bold text-blue-700 mb-6 text-center">Booking Summary</h3>
 
                         <!-- HOME TYPE SUMMARY -->
                         <div class="flex flex-col gap-1 hidden" id="homeTypeSummaryDiv">
                             <div class="flex items-center gap-2">
                                 <span class="material-icons text-blue-500">home</span>
-                                <span class="font-medium text-gray-800">Home Type:</span>
+                                <span id="summary-home-type" class="text-gray-500 font-semibold"></span>
                             </div>
-                            <span id="summary-home-type" class="text-gray-500 font-semibold">-</span>
                         </div>
 
                         <!-- SERVICE AND BATHROOMS -->
                         <div class="flex flex-col items-end gap-2 mb-6">
-                            <span id="summary-service" class="text-gray-500 font-semibold">-</span>
+                            <span id="summary-service" class="text-gray-500 font-semibold"></span>
 
+                            <!-- PACKAGE SUMMARY -->
+                            <div class="flex flex-col gap-1 hidden" id="packageSummaryDiv">
+                                <span id="summary-package" class="text-gray-500 font-semibold"></span>
+                            </div>
                             <div class="flex items-center gap-1 hidden" id="fullBathroomSummaryDiv">
                                 <span class="font-medium text-gray-500">Full Bathrooms:</span>
                                 <span id="summary-full-bathroom-price" class="text-gray-500 font-semibold">$0.00</span>
@@ -757,7 +763,7 @@
                                 <span class="material-icons text-blue-500">calendar_today</span>
                                 <span class="font-medium text-gray-800">Date:</span>
                             </div>
-                            <span id="summary-date" class="text-gray-600 font-semibold">-</span>
+                            <span id="summary-date" class="text-gray-600 font-semibold"></span>
                         </div>
 
                         <!-- How Often -->
@@ -766,7 +772,7 @@
                                 <span class="material-icons text-orange-500">repeat</span>
                                 <span class="font-medium text-gray-800">How Often:</span>
                             </div>
-                            <span id="summary-frequency" class="text-gray-600 font-semibold">-</span>
+                            <span id="summary-frequency" class="text-gray-600 font-semibold"></span>
                         </div>
 
                         <!-- Additional Info: Payment Method & Tip -->
@@ -780,8 +786,15 @@
                             <span class="text-gray-800">Total:</span>
                             <span id="summary-total" class="text-blue-600 text-xl">$0.00</span>
                         </div>
+
+                        <!-- Recurring Total -->
+                        <div id="recurringTotalDiv" class="flex justify-between items-center text-lg font-semibold bg-gradient-to-r from-green-50 to-green-100 p-4 rounded-xl border border-green-200 mt-3 hidden">
+                            <span class="text-gray-800">Recurring Total:</span>
+                            <span id="summary-recurring-total" class="text-green-600 text-xl">$0.00</span>
+                        </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
@@ -990,7 +1003,7 @@
         });
     </script>
 
-    <script src="contact.js"></script>
+    <script src="./scripts/contact.js"></script>
     
 </body>
 </html>
