--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <!-- Material Symbols Outlined -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Material+Symbols+Rounded" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
         body {
         font-family: 'Poppins', sans-serif;
@@ -406,146 +407,6 @@
                     </div>
                 </div>
 
-                <!-- Additional Services
-                <div class="md:col-span-2 mt-6">
-                <h3 class="text-xl font-semibold mb-4 text-blue-800 flex items-center gap-2">
-                    <span class="material-symbols-outlined text-blue-800">build</span>
-                    Additional Services
-                </h3>
-
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-
-                    Empty Kitchen Cabinet
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="25">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">kitchen</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Empty Kitchen Cabinet - $25</span>
-                    </div>
-
-                    Empty Fridge
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="25">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">icecream</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Empty Fridge - $25</span>
-                    </div>
-
-                    Full Stocked Fridge
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="35">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">inventory</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Full Stocked Fridge - $35</span>
-                    </div>
-
-                    Load and Fold Laundry
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="40">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">local_laundry_service</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Load & Fold Laundry - $40</span>
-                    </div>
-
-                    Garage Sweep/Vacuum
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="15">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">garage</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Garage Sweep/Vacuum - $15</span>
-                    </div>
-
-                    Bedsheet Change
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="15">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">bed</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Bedsheet Change - $15</span>
-                    </div>
-
-                    Laundry Fold (no wash)
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="20">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">checkroom</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Laundry Fold (no wash) - $20</span>
-                    </div>
-
-                    Wall Wash
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="55">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">format_paint</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Wall Wash - $55</span>
-                    </div>
-
-                    Pet
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="15">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">pets</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Pet - $15</span>
-                    </div>
-
-                    Additional Room
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="15">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">meeting_room</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Additional Room - $15</span>
-                    </div>
-
-                    Finished Basement
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="35">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">foundation</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Finished Basement - $35</span>
-                    </div>
-
-                    Blinds Wet Wiping
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="35">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">window</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Blinds Wet Wiping - $35</span>
-                    </div>
-
-                    Bathroom
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="24">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">bathtub</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Bathroom - $24</span>
-                    </div>
-
-                    Half Bathroom
-                    <div class="additional-service group border border-gray-300 rounded-2xl p-8 flex flex-col items-center justify-center cursor-pointer 
-                                hover:shadow-lg hover:-translate-y-1 transition-all duration-300 
-                                bg-gradient-to-b from-gray-100 to-white"
-                        data-price="12">
-                    <span class="material-symbols-outlined text-6xl mb-2 text-gray-700 group-hover:text-black transition-all">wash</span>
-                    <span class="font-bold text-base text-gray-800 group-hover:text-black">Half Bathroom - $12</span>
-                    </div>
-
-                 </div>
-
-                <h3 class="text-lg font-semibold mt-4 text-blue-800">Additional Services Total: <span id="additionalTotal">$0</span></h3>
-                </div> -->
-
                 <!-- Address Details -->
                 <div class="md:col-span-2 mt-6">
                     <h3 class="text-xl font-semibold mb-4 text-blue-800">Address Details</h3>
@@ -576,26 +437,17 @@
 
                     <div class="space-y-4">
                         <!-- Checkboxes in One Line -->
-                        <div class="flex items-center gap-6 flex-wrap">
-                        <label class="flex items-center gap-2">
-                            <input type="checkbox" class="accent-blue-600">
-                            Will Be Home
-                        </label>
-                        <label class="flex items-center gap-2">
-                            <input type="checkbox" class="accent-blue-600">
-                            Hidden Key
-                        </label>
-                        <label class="flex items-center gap-2">
-                            <input type="checkbox" class="accent-blue-600">
-                            Code
-                        </label>
-                        </div>
-
+                        <div id="keyInfoGroup">
+                        <label><input type="checkbox"> Will Be Home</label>
+                        <label><input type="checkbox"> Hidden Key</label>
+                        <label><input type="checkbox"> Code</label>
+                    </div>
                         <!-- Notes -->
                         <textarea 
-                        placeholder="Notes" 
-                        class="border p-3 rounded-lg w-full resize-none focus:ring-2 focus:ring-blue-500 focus:outline-none"
-                        rows="4">
+                            id="jobNotes"
+                            placeholder="Notes" 
+                            class="border p-3 rounded-lg w-full resize-none focus:ring-2 focus:ring-blue-500 focus:outline-none"
+                            rows="4">
                         </textarea>
                     </div>
                 </div>
@@ -606,12 +458,13 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     
                         <!-- Preferred Contact Method -->
-                        <select class="border p-3 rounded-lg w-full">
-                        <option value="" disabled selected>Preferred Contact Method</option>
-                        <option value="email">Email</option>
-                        <option value="phone">Phone</option>
-                        <option value="phone">Text</option>
+                        <select id="preferredContact" class="border p-3 rounded-lg w-full">
+                            <option value="" disabled selected>Preferred Contact Method</option>
+                            <option value="email">Email</option>
+                            <option value="phone">Phone</option>
+                            <option value="text">Text</option>
                         </select>
+
 
                         <!-- Optional Feedback -->
                         <textarea placeholder="What can we do to be the best cleaning service? (Optional)" class="border p-3 rounded-lg w-full md:col-span-2"></textarea>
