--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <h1 class="text-4xl md:text-6xl font-extrabold mb-4 text-gray-200 animate-fadeInDown">
                 We Instantly Polished
             </h1>
-            <p class="text-4xl md:text-6xl mb-8 text-gray-300 animate-fadeInUp">
+            <p class="text-4xl md:text-6xl mb-8 font-extrabold text-gray-300 animate-fadeInUp">
                 Every Detail
             </p>
             <a href="contact.html"
@@ -243,7 +243,6 @@
                 
                 <!-- Text Content -->
                 <div class="w-full md:w-3/4 lg:w-2/3">
-                    <h2 class="text-4xl md:text-5xl font-semibold text-blue-600 mb-4">About Us</h2>
                     <h3 class="text-2xl md:text-3xl font-medium mb-6">No Mess, No Stress, Just Clean Homes</h3>
                     <p class="text-gray-600 leading-relaxed text-lg">
                         Who doesn’t love that just-cleaned feeling? At <span class="font-semibold text-blue-500">WIPED</span>, 
