--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | WIPED</title>
-    <link rel="icon" href="./assets/logo/wiped-logo.png" type="image/webp">
+    <link rel="icon" href="./assets/logo/wiped-logo.webp" type="image/webp">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Material+Symbols+Rounded" rel="stylesheet">
@@ -97,7 +97,7 @@
 
             <!-- CENTER: LOGO -->
             <a href="index.html" class="flex items-center space-x-2 transition-all duration-500">
-                <img id="mainLogo" src="./assets/logo/wiped-logo.png" alt="Wiped Logo" class="h-20 w-auto object-contain transition-all duration-500">
+                <img id="mainLogo" src="./assets/logo/wiped-logo.webp" alt="Wiped Logo" class="h-20 w-auto object-contain transition-all duration-500">
             </a>
 
             <!-- RIGHT: BOOK NOW BUTTON -->
@@ -210,7 +210,7 @@
         </div>
     </div>
 
-    <section class="relative pt-36 pb-20 bg-cover bg-center" style="background-image: url('./assets/hero/about.jpg');">
+    <section class="relative pt-36 pb-20 bg-cover bg-center" style="background-image: url('./assets/hero/about.webp');">
         <!-- Optional Overlay -->
         <div class="absolute inset-0 bg-blue-600 bg-opacity-50"></div> <!-- dark overlay, optional -->
         
@@ -761,7 +761,7 @@
             <div class="text-center sm:text-left flex flex-col items-center sm:items-start">
                 <!-- LOGO -->
                 <img 
-                    src="./assets/logo/wiped-logo.png" 
+                    src="./assets/logo/wiped-logo.webp" 
                     alt="Cleaning Service Icon" 
                     class="w-36 h-20 mb-5 object-contain"
                 />
@@ -852,7 +852,7 @@
                     </li>
                     <li class="flex items-center justify-center sm:justify-start gap-2">
                         <span class="material-icons text-blue-400">email</span>
-                        <span>admin@wipedcleaningsrvcs.com</span>
+                        <span>admin@wipedcleaningservices.ca</span>
                     </li>
                     <li class="flex items-center justify-center sm:justify-start gap-2">
                         <span class="material-icons text-blue-400">location_on</span>
@@ -925,35 +925,43 @@
     
 
     <script>
-        const menuBtn = document.getElementById('menuButton');
-        const menuOverlay = document.getElementById('menuOverlay');
-        const closeMenu = document.getElementById('closeMenu');
+    document.addEventListener("DOMContentLoaded", () => {
+        // MENU OVERLAY
+        const menuBtn = document.getElementById("menuButton");
+        const menuOverlay = document.getElementById("menuOverlay");
+        const closeMenu = document.getElementById("closeMenu");
 
-        menuBtn.addEventListener('click', () => {
-            menuOverlay.classList.remove('opacity-0', 'pointer-events-none');
-            menuOverlay.classList.add('opacity-100');
+        if (menuBtn && menuOverlay && closeMenu) {
+        menuBtn.addEventListener("click", () => {
+            menuOverlay.classList.remove("opacity-0", "pointer-events-none");
+            menuOverlay.classList.add("opacity-100");
         });
 
-        closeMenu.addEventListener('click', () => {
-            menuOverlay.classList.add('opacity-0', 'pointer-events-none');
-            menuOverlay.classList.remove('opacity-100');
+        closeMenu.addEventListener("click", () => {
+            menuOverlay.classList.add("opacity-0", "pointer-events-none");
+            menuOverlay.classList.remove("opacity-100");
         });
-    </script>
+        }
 
-    <!-- SHRINK LOGO ON SCROLL -->
-    <script>
+        // SHRINK LOGO ON SCROLL
         const header = document.getElementById("mainHeader");
         const logo = document.getElementById("mainLogo");
 
+        let lastScrollY = 0;
         window.addEventListener("scroll", () => {
-            if (window.scrollY > 50) {
-            header.classList.add("backdrop-blur-md", "bg-white/50");
-            logo.classList.replace("h-20", "h-14");
-            } else {
-            header.classList.remove("backdrop-blur-md", "bg-white/50");
-            logo.classList.replace("h-14", "h-20");
-            }
+        const currentY = window.scrollY;
+
+        if (currentY > 50 && lastScrollY <= 50) {
+            header?.classList.add("backdrop-blur-md", "bg-white/50");
+            logo?.classList.replace("h-20", "h-14");
+        } else if (currentY <= 50 && lastScrollY > 50) {
+            header?.classList.remove("backdrop-blur-md", "bg-white/50");
+            logo?.classList.replace("h-14", "h-20");
+        }
+
+        lastScrollY = currentY;
         });
+    });
     </script>
 
     <!--Customers Review -->
